# python-backend-setup

./: README.md  index.html  script.js
templates/: generate-files-json.sh  pyproject.toml
templates/poetry/: README.md  pyproject.toml
templates/poetry_v1/: README.md  files.json  pyproject.toml
templates/poetry_v2/: Dockerfile  README.md  pyproject.toml
templates/project/: files.json
templates/project/env_files/: env.debug  env.dev  env.development  env.prod
templates/project/tests/: conftest.py  test_managers.py  test_routes.py
templates/project/{{project-name}}/: __init__.py  app.py  dependencies.py  main.py  settings.py
templates/project/{{project-name}}/common/: __init__.py  exception_handlers.py  exceptions.py
templates/project/{{project-name}}/common/managers/: __init__.py  greetings_manager.py
templates/project/{{project-name}}/routes/: __init__.py
templates/project/{{project-name}}/routes/v0/: __init__.py  constants.py
templates/project/{{project-name}}/routes/v0/greetings/: __init__.py  api.py
templates/vscode/: files.json  launch.json
