[tool.poetry]
name = "{{project-name}}"
version = "0.1.0"
description = "{{project-description}}"
authors = ["{{authors}}"]
license = "{{license}}"
readme = "README.md"

[tool.poetry.dependencies]
python = "{{python-version}}"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
